--- a/config/config.ini
+++ b/config/config.ini
@@ -4,4 +4,4 @@ mask_pic=config\mask_picture.png
 bg_pic=config\background.jpg
 
 [window_config]
-font_file='C:\Windows\Fonts\COOPBL.TTF'
+font_file=C:\Windows\Fonts\BASKVILL.TTF
